@@ -1,7 +1,8 @@
 2008-07-31  Miguel Sofer  <msofer@users.sf.net>
 
-	* generic/tclBasic.c:   NR-enabling [catch]
-	* generic/tclCmdAH.c:
+	* generic/tclBasic.c:   NR-enabling [catch] and [if] (the script,
+	* generic/tclCmdAH.c:   not the test)
+	* generic/tclCmdIL.c:
 	* generic/tclInt.h:
 	* tests/NRE.test:
 	
